# civitai-browser

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: generate-latest-json.mjs  release.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  civitai.rs  comfy.rs  download.rs  error.rs  lib.rs  main.rs
src/api/: classifier.ts  comfyExport.ts  queries.ts  tauri.ts  types.ts
src/components/: AltInstallDialog.tsx  AppErrorBoundary.tsx  BlurPlaceholder.tsx  DetailPanel.tsx  DownloadFlyLayer.tsx  DownloadsPanel.tsx  FilterBar.tsx  Gallery.tsx  GalleryError.tsx  GallerySkeleton.tsx  ImageCard.tsx  ImageLightbox.tsx  SettingsDialog.tsx  TitleBar.tsx  UpdateChecker.tsx  WindowControls.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  switch.tsx
src/hooks/: useImageDrag.ts
src/lib/: imageTags.ts  nsfw.ts  toast.tsx  updater.ts  utils.ts
src/stores/: downloads.ts  filters.ts  nsfwReveal.ts  settings.ts  ui.ts
