[package]
name = "civitai-browser"
version = "2.0.0"
description = "Browse Civitai images with ComfyUI workflows"
authors = ["you"]
edition = "2021"

[lib]
name = "civitai_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-drag = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls", "query"] }
tokio = { version = "1.52.4", features = ["full"] }
url = "2.5.8"
thiserror = "2.0.18"
dirs = "6.0.0"
futures-util = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
